https://bugs.webkit.org/show_bug.cgi?id=289445 rdar://173343223 (DownloadsManager overrides WebKit's MIME-corrected filename with stale URL-derived extension)

Reviewed by NOBODY (OOPS!).

When a download is initiated via context menu, Safari caches a URL-derived filename on the
DownloadProgressEntry before the HTTP response arrives. The cached filename's extension may
not match the actual Content-Type (e.g., .gif for a video/mp4 response). In
decideDestinationUsingResponse:suggestedFilename:completionHandler: the stale filename
unconditionally overrides WebKit's MIME-corrected suggested filename.

Fix: Only apply the entry's suggested filename when the file extensions match, preserving
WebKit's MIME-corrected extension when they differ.

Related: rdar://147183354

No new tests (OOPS!).

* Mac/Safari/Downloads/DownloadsManager.mm:
(-[DownloadsManager download:decideDestinationUsingResponse:suggestedFilename:completionHandler:]):